--- a/chess/package.json
+++ b/chess/package.json
@@ -4,8 +4,8 @@
   "description": "Chess game for RSS",
   "main": "index.ts",
   "scripts": {
-    "build": "npx webpack",
-    "dev-server": "npx webpack serve --mode=development ",
+    "build": "webpack",
+    "dev": "webpack serve --env development",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix"
   },
@@ -37,7 +37,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.1",
+    "path": "^0.12.7",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9"
   }
