--- a/chess/server/tsconfig.json
+++ b/chess/server/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "target": "ES2019",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es6",
-    "allowJs": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-  }
+    "sourceMap": true,
+    "outDir": "dist"
+  },
+  "lib": ["ES2019"]
 }
+
