--- a/chess/client/.eslintrc.json
+++ b/chess/client/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "no-console": "off"
+    "no-unused-vars":  ["error", { "varsIgnorePattern": "modalWindow" }],
+    "@typescript-eslint/no-unused-vars":  ["error", { "varsIgnorePattern": "modalWindow" }]
   }
 }
