--- a/packages/chess-client/.eslintrc.json
+++ b/packages/chess-client/.eslintrc.json
@@ -37,7 +37,9 @@
         "@typescript-eslint/no-unsafe-assignment": 0,
         "@typescript-eslint/strict-boolean-expressions": 0,
         "@typescript-eslint/no-extraneous-class": 0,
-        "@typescript-eslint/no-unsafe-return": 0
+        "@typescript-eslint/no-unsafe-return": 0,
+        "@typescript-eslint/parameter-properties": 0,
+        "@typescript-eslint/no-type-alias": 0
       }
     },
     {
