--- a/packages/chess-server/.eslintrc.json
+++ b/packages/chess-server/.eslintrc.json
@@ -41,7 +41,8 @@
         "@typescript-eslint/strict-boolean-expressions": 0,
         "@typescript-eslint/no-extraneous-class": 0,
         "@typescript-eslint/no-unsafe-return": 0,
-        "import/no-extraneous-dependencies": 0
+        "import/no-extraneous-dependencies": 0,
+        "@typescript-eslint/no-magic-numbers": 0
       }
     },
     {
