--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "license": "MIT",
   "scripts": {
     "start-client": "nx run chess-client:serve",
-    "start-server": "nx run chess-server:serve"
+    "build-client": "nx run chess-client:build",
+    "start-server": "nx run chess-server:serve",
+    "lint": "nx run-many --target=lint",
+    "lint-and-fix": "nx run-many --target=lint --fix",
+    "test": "nx run-many --target=test"
   },
   "private": true,
   "dependencies": {
@@ -39,7 +43,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
     "@types/helmet": "0.0.46",
-    "@types/jest": "28.1.1",
+    "@types/jest": "^28.1.1",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "18.7.1",
