--- a/packages/chess-client/.eslintrc.json
+++ b/packages/chess-client/.eslintrc.json
@@ -39,7 +39,9 @@
         "@typescript-eslint/no-extraneous-class": 0,
         "@typescript-eslint/no-unsafe-return": 0,
         "@typescript-eslint/parameter-properties": 0,
-        "@typescript-eslint/no-type-alias": 0
+        "@typescript-eslint/no-type-alias": 0,
+        "@typescript-eslint/no-magic-numbers": 0,
+        "@typescript-eslint/member-ordering": 0
       }
     },
     {
