--- a/packages/coordinate/.eslintrc.json
+++ b/packages/coordinate/.eslintrc.json
@@ -4,7 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "import/prefer-default-export": 0
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
