--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start-client": "nx run chess-client:serve",
     "build-client": "nx run chess-client:build",
     "start-server": "nx run chess-server:serve",
+    "lint-client": "nx chess-server:lint --fix",
     "lint": "nx run-many --target=lint",
     "lint-and-fix": "nx run-many --target=lint --fix",
     "test": "nx run-many --target=test"
@@ -71,6 +72,7 @@
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
     "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.25.8"
