--- a/packages/chess-client/.eslintrc.json
+++ b/packages/chess-client/.eslintrc.json
@@ -41,7 +41,10 @@
         "@typescript-eslint/parameter-properties": 0,
         "@typescript-eslint/no-type-alias": 0,
         "@typescript-eslint/no-magic-numbers": 0,
-        "@typescript-eslint/member-ordering": 0
+        "@typescript-eslint/member-ordering": 0,
+        "@typescript-eslint/prefer-enum-initializers": 0,
+        "no-console": 0,
+        "@typescript-eslint/no-unsafe-member-access": 1
       }
     },
     {
