refactor: remove commented code, remove code duplicates, fix 'this' usage

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,8 @@
         "import/no-extraneous-dependencies": [
           "error",
           { "includeInternal": true, "includeTypes": true }
-        ]
+        ],
+        "@typescript-eslint/no-type-alias": 0
       }
     },
     {
