--- a/packages/chess-server/.eslintrc.json
+++ b/packages/chess-server/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "jest.config.ts"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
@@ -9,9 +9,7 @@
     {
       "files": ["*.ts", "*.tsx"],
       "parserOptions": {
-        "project": [
-          "packages/chess-server/tsconfig.app.json"
-        ]
+        "project": ["packages/chess-server/tsconfig.app.json"]
         // Specify it only for TypeScript files
       },
       "rules": {
