--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start-client": "nx run chess-client:serve",
     "build-client": "nx run chess-client:build",
     "start-server": "nx run chess-server:serve",
-    "lint-client": "nx chess-server:lint --fix",
+    "lint-client": "nx run chess-client:lint --fix",
+    "lint-server": "nx run chess-server:lint --fix",
     "lint": "nx run-many --target=lint",
     "lint-and-fix": "nx run-many --target=lint --fix",
     "test": "nx run-many --target=test"
@@ -24,7 +25,6 @@
     "lodash.clonedeep": "^4.5.0",
     "qs": "^6.9.4",
     "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0",
     "ws": "^8.12.0"
@@ -68,6 +68,7 @@
     "jsdom": "~20.0.3",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
+    "redux-devtools-extension": "^2.13.9",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
