--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,8 +17,9 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@coordinate": ["packages/coordinate/src/index.ts"],
-      "@client/*": ["packages/chess-client/src/*"]
+      "@chess/game-common": ["packages/game-common/src/index.ts"],
+      "@client/*": ["packages/chess-client/src/*"],
+      "@coordinate": ["packages/coordinate/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
