--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
     "vite": "^4.0.1",
+    "vite-plugin-checker": "^0.6.1",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.2.0",
