--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx"],
+  "plugins": ["@nrwl/nx", "css-modules"],
   "parser": "@typescript-eslint/parser",
+  "extends": ["plugin:css-modules/recommended"],
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
