--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
@@ -72,6 +73,7 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
+    "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.0.1",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-dts": "~1.7.1",
