--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,7 +11,7 @@
     "target": "es2015",
     "module": "esnext",
     "lib": ["es2017", "dom"],
-    "typeRoots": ["node_modules/@types"],
+    "typeRoots": ["node_modules/@types", "node_modules"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "strict": true,
@@ -20,7 +20,8 @@
       "@chess/game-common": ["packages/game-common/src/index.ts"],
       "@client/*": ["packages/chess-client/src/*"],
       "@coordinate": ["packages/coordinate/src/index.ts"]
-    }
+    },
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "exclude": ["node_modules", "tmp"]
 }
