--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build-client": "nx run chess-client:build",
     "start-server": "nx run chess-server:serve",
     "lint-client": "nx run chess-client:lint --fix",
+    "client-source-map": "npx source-map-explorer dist/packages/chess-client/assets/*.js --no-border-checks",
     "lint-server": "nx run chess-server:lint --fix",
     "lint": "nx run-many --target=lint",
     "lint-and-fix": "nx run-many --target=lint --fix",
@@ -14,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.2",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -30,32 +31,22 @@
     "ws": "^8.12.0"
   },
   "devDependencies": {
-    "@nrwl/cypress": "15.6.3",
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/express": "^15.6.3",
-    "@nrwl/jest": "15.6.3",
-    "@nrwl/js": "15.6.3",
-    "@nrwl/linter": "15.6.3",
-    "@nrwl/node": "15.6.3",
-    "@nrwl/vite": "15.6.3",
-    "@nrwl/web": "^15.6.3",
-    "@nrwl/webpack": "^15.6.3",
-    "@nrwl/workspace": "15.6.3",
+    "@nx/webpack": "16.5.5",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
     "@types/helmet": "0.0.46",
-    "@types/jest": "^28.1.1",
+    "@types/jest": "29.4.4",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "18.7.1",
     "@types/qs": "^6.9.2",
     "@types/supertest": "^2.0.9",
     "@types/ws": "^8.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitest/coverage-c8": "~0.25.8",
-    "@vitest/ui": "^0.25.8",
-    "cypress": "^12.2.0",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "@vitest/coverage-c8": "0.31.0",
+    "@vitest/ui": "0.31.0",
+    "cypress": "12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -64,21 +55,32 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jsdom": "~20.0.3",
-    "nx": "15.6.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jsdom": "22.1.0",
+    "nx": "16.5.5",
     "prettier": "^2.6.2",
     "redux-devtools-extension": "^2.13.9",
-    "ts-jest": "28.0.5",
+    "source-map-explorer": "^2.5.3",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
+    "typescript": "5.1.6",
     "typescript-plugin-css-modules": "^5.0.1",
-    "vite": "^4.0.1",
+    "vite": "4.3.4",
     "vite-plugin-checker": "^0.6.1",
-    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.25.8"
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.31.0",
+    "@nx/workspace": "16.5.5",
+    "@nx/vite": "16.5.5",
+    "@nx/cypress": "16.5.5",
+    "@nx/web": "16.5.5",
+    "@nx/linter": "16.5.5",
+    "@nx/js": "16.5.5",
+    "@nx/eslint-plugin": "16.5.5",
+    "@nx/jest": "16.5.5",
+    "@nx/node": "16.5.5",
+    "@nx/express": "16.5.5"
   }
 }
