--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,11 @@
       "@client/*": ["packages/chess-client/src/*"],
       "@coordinate": ["packages/coordinate/src/index.ts"]
     },
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   },
   "exclude": ["node_modules", "tmp"]
 }
