--- a/package.json
+++ b/package.json
@@ -16,25 +16,35 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.3.2",
+    "axios": "^1.4.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
-    "helmet": "^6.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "lodash.clonedeep": "^4.5.0",
     "qs": "^6.9.4",
     "redux": "^4.2.1",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0",
-    "ws": "^8.12.0"
+    "tslib": "^2.6.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@nx/cypress": "16.5.5",
+    "@nx/eslint-plugin": "16.5.5",
+    "@nx/express": "16.5.5",
+    "@nx/jest": "16.5.5",
+    "@nx/js": "16.5.5",
+    "@nx/linter": "16.5.5",
+    "@nx/node": "16.5.5",
+    "@nx/vite": "16.5.5",
+    "@nx/web": "16.5.5",
     "@nx/webpack": "16.5.5",
+    "@nx/workspace": "16.5.5",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
-    "@types/helmet": "0.0.46",
+    "@types/helmet": "4.0.0",
     "@types/jest": "29.4.4",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash.clonedeep": "^4.5.6",
@@ -47,40 +57,30 @@
     "@vitest/coverage-c8": "0.31.0",
     "@vitest/ui": "0.31.0",
     "cypress": "12.16.0",
-    "eslint": "~8.15.0",
+    "eslint": "~8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jsdom": "22.1.0",
     "nx": "16.5.5",
-    "prettier": "^2.6.2",
+    "prettier": "^3.0.0",
     "redux-devtools-extension": "^2.13.9",
     "source-map-explorer": "^2.5.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.1.6",
     "typescript-plugin-css-modules": "^5.0.1",
-    "vite": "4.3.4",
+    "vite": "^4.3.4",
     "vite-plugin-checker": "^0.6.1",
     "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.31.0",
-    "@nx/workspace": "16.5.5",
-    "@nx/vite": "16.5.5",
-    "@nx/cypress": "16.5.5",
-    "@nx/web": "16.5.5",
-    "@nx/linter": "16.5.5",
-    "@nx/js": "16.5.5",
-    "@nx/eslint-plugin": "16.5.5",
-    "@nx/jest": "16.5.5",
-    "@nx/node": "16.5.5",
-    "@nx/express": "16.5.5"
+    "vitest": "0.31.0"
   }
 }
