refactor: add ts path config, refactor figure managers

--- a/packages/chess-client/tsconfig.json
+++ b/packages/chess-client/tsconfig.json
@@ -30,6 +30,7 @@
     }
   ],
   "paths": {
-    "@client/*": ["packages/chess-client/src/*"]
+    "@client/*": ["packages/chess-client/src/*"],
+    "@components/*": ["packages/chess-client/src/app/components/*"],
   }
 }
