--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
     "paths": {
       "@chess/game-common": ["packages/game-common/src/index.ts"],
       "@client/*": ["packages/chess-client/src/*"],
-      "@coordinate": ["packages/coordinate/src/index.ts"]
+      "@coordinate": ["packages/coordinate/src/index.ts"],
+      "@components/*": ["packages/chess-client/src/app/components/*"]
     },
     "plugins": [
       {
