--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,13 @@
           { "includeInternal": true, "includeTypes": true }
         ],
         "@typescript-eslint/no-type-alias": 0,
-        "import/prefer-default-export": 0
+        "import/prefer-default-export": 0,
+        "@typescript-eslint/no-magic-numbers": [
+          "error",
+          {
+            "ignoreEnums": true
+          }
+        ]
       }
     },
     {
