--- a/packages/chess-client/.eslintrc.json
+++ b/packages/chess-client/.eslintrc.json
@@ -20,9 +20,8 @@
             "checksVoidReturn": false
           }
         ],
-        "@typescript-eslint/no-floating-promises": 0,
         "@typescript-eslint/explicit-member-accessibility": [
-          0,
+          2,
           {
             "accessibility": "explicit",
             "overrides": {
@@ -30,19 +29,18 @@
             }
           }
         ],
-        "@typescript-eslint/no-parameter-properties": 0,
-        "@typescript-eslint/prefer-readonly-parameter-types": 0,
-        "@typescript-eslint/promise-function-async": 0,
-        "@typescript-eslint/explicit-function-return-type": 0,
-        "@typescript-eslint/no-unsafe-assignment": 0,
-        "@typescript-eslint/strict-boolean-expressions": 0,
-        "@typescript-eslint/no-extraneous-class": 0,
-        "@typescript-eslint/no-unsafe-return": 0,
+        "@typescript-eslint/explicit-function-return-type": [
+          2,
+          {
+            "allowExpressions": true
+          }
+        ],
         "@typescript-eslint/parameter-properties": 0,
+        "@typescript-eslint/prefer-readonly-parameter-types": 0,
+        "@typescript-eslint/no-extraneous-class": 1,
         "@typescript-eslint/no-magic-numbers": 0,
-        "@typescript-eslint/member-ordering": 0,
-        "@typescript-eslint/prefer-enum-initializers": 0,
         "no-console": 1,
+        "no-void": 1,
         "@typescript-eslint/no-unsafe-member-access": 1
       }
     },
