--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,8 @@
           {
             "ignoreEnums": true
           }
-        ]
+        ],
+        "@typescript-eslint/promise-function-async": 0
       }
     },
     {
