refactor: encapsulate state logic into service, fix builds

--- a/packages/coordinate/project.json
+++ b/packages/coordinate/project.json
@@ -4,26 +4,22 @@
   "sourceRoot": "packages/coordinate/src",
   "projectType": "library",
   "targets": {
-    "build": {
-      "executor": "@nx/js:tsc",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/packages/coordinate",
-        "main": "packages/coordinate/src/index.ts",
-        "tsConfig": "packages/coordinate/tsconfig.lib.json",
-        "assets": ["packages/coordinate/*.md"]
-      }
-    },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/coordinate/**/*.ts"]
+        "lintFilePatterns": [
+          "packages/coordinate/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "packages/coordinate/jest.config.ts",
         "passWithNoTests": true
