--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start-client": "nx run chess-client:serve",
     "build-client": "nx run chess-client:build",
     "start-server": "nx run chess-server:serve",
+    "build-server": "nx run chess-server:build",
     "lint-client": "nx run chess-client:lint --fix",
     "client-source-map": "npx source-map-explorer dist/packages/chess-client/assets/*.js --no-border-checks",
     "lint-server": "nx run chess-server:lint --fix",
@@ -67,6 +68,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "22.1.0",
     "nx": "16.5.5",
     "prettier": "^3.0.0",
