--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.2.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.6.0",
+    "uuid": "^9.0.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "@types/node": "18.7.1",
     "@types/qs": "^6.9.2",
     "@types/supertest": "^2.0.9",
+    "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
