--- a/packages/chess-server-e2e/project.json
+++ b/packages/chess-server-e2e/project.json
@@ -7,16 +7,12 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
-        "jestConfig": "packages/chess-server-e2e/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "packages/chess-server-e2e/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["packages/chess-server-e2e/**/*.{js,ts}"]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     }
   }
 }
