--- a/packages/dao/project.json
+++ b/packages/dao/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "utils",
+  "name": "dao",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/utils/src",
+  "sourceRoot": "packages/dao/src",
   "projectType": "library",
   "targets": {
     "lint": {
@@ -12,7 +12,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/utils/jest.config.ts"
+        "jestConfig": "packages/dao/jest.config.ts"
       }
     }
   },
