--- a/packages/dao/.eslintrc.json
+++ b/packages/dao/.eslintrc.json
@@ -1,25 +1,16 @@
 {
-  "extends": [
-    "../../.eslintrc.json"
-  ],
-  "ignorePatterns": [
-    "!**/*"
-  ],
+  "extends": ["../../.eslintrc.json"],
+  "ignorePatterns": ["!**/*"],
   "overrides": [
     {
-      "files": [
-        "*.ts",
-        "*.tsx",
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {}
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
+      "parserOptions": {
+        "project": ["packages/dao/tsconfig.lib.json", "packages/dao/tsconfig.spec.json"]
+      },
+      "files": ["*.ts", "*.tsx"],
       "rules": {
         "@typescript-eslint/prefer-readonly-parameter-types": 0,
         "@typescript-eslint/no-magic-numbers": 0,
@@ -33,10 +24,14 @@
       }
     },
     {
-      "files": [
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.js", "*.jsx"],
+      "rules": {}
+    },
+    {
+      "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
+      "env": {
+        "jest": true
+      },
       "rules": {}
     }
   ]
