--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint-server": "nx run chess-server:lint --fix",
     "lint": "nx run-many --target=lint",
     "lint-and-fix": "nx run-many --target=lint --fix",
-    "test": "nx run-many --target=test"
+    "test": "nx run-many --target=test",
+    "test-with-coverage": "nx run-many --target=test --code-coverage"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@nx/cypress": "17.2.6",
+    "@nx/eslint": "17.2.6",
     "@nx/eslint-plugin": "17.2.6",
     "@nx/express": "17.2.6",
     "@nx/jest": "17.2.6",
@@ -67,6 +69,7 @@
     "eslint-plugin-cypress": "2.13.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
+    "fake-indexeddb": "^5.0.1",
     "jest": "29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "jest-environment-node": "^29.4.1",
@@ -85,7 +88,6 @@
     "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.34.6",
-    "@nx/eslint": "17.2.6"
+    "vitest": "0.34.6"
   }
 }
