--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@preact/signals-core": "^1.5.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "core-js": "^3.6.5",
@@ -25,6 +26,8 @@
     "express": "^4.18.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
+    "lit": "^3.1.0",
+    "lit-html": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
     "qs": "^6.9.4",
     "redux": "^4.2.1",
