--- a/packages/chess-client/.eslintrc.json
+++ b/packages/chess-client/.eslintrc.json
@@ -44,7 +44,8 @@
         "@typescript-eslint/no-magic-numbers": 0,
         "no-console": 1,
         "no-void": 1,
-        "@typescript-eslint/no-unsafe-member-access": 1
+        "@typescript-eslint/no-unsafe-member-access": 1,
+        "import/extensions": [2, "never", { "js": "always" }]
       }
     },
     {
