--- a/package.json
+++ b/package.json
@@ -19,22 +19,28 @@
   "dependencies": {
     "@preact/signals-core": "^1.5.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@typegoose/typegoose": "^12.0.0",
     "axios": "^1.4.0",
+    "connect-mongo": "^5.1.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "lit": "^3.1.0",
     "lit-html": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "qs": "^6.9.4",
     "redux": "^4.2.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.6.0",
     "uuid": "^9.0.1",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@nx/cypress": "17.2.6",
@@ -50,6 +56,7 @@
     "@nx/workspace": "17.2.6",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/helmet": "4.0.0",
     "@types/jest": "29.4.4",
     "@types/jsonwebtoken": "^8.3.9",
