feat: add users and refresh token entity, implement auth and users controllers

--- a/packages/chess-server/.eslintrc.json
+++ b/packages/chess-server/.eslintrc.json
@@ -42,7 +42,9 @@
           {
             "allowExpressions": true
           }
-        ]
+        ],
+        "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+        "consistent-return": 0
       }
     },
     {
