--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@typegoose/typegoose": "^12.0.0",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.1.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -28,7 +29,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lit": "^3.1.0",
     "lit-html": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
@@ -54,6 +55,7 @@
     "@nx/web": "17.2.6",
     "@nx/webpack": "17.2.6",
     "@nx/workspace": "17.2.6",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.10",
